style: fix header spacing and reset default margins

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background-color: black; /* Biar nggak ada warna putih pas scroll */
+}
 .counter {
   font-size: 16px;
   padding: 5px 10px;
@@ -167,7 +181,7 @@
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: -4.5px;
     border: 5px solid transparent;
