--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background-color: black; /* Biar nggak ada warna putih pas scroll */
+}
